# qemacs

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  config.h.in  configure  display.h  eventloop_qt.cpp  gtk.c  lua-plugins.c  meson.build  meson_options.txt  qe.h  qt.cpp  qt.h  treesitter.c  util.c
.github/workflows/: workflow.yml
subprojects/: .gitignore  tree-sitter-go.wrap  tree-sitter-json.wrap  tree-sitter.wrap
subprojects/packagefiles/tree-sitter-go/: meson.build
subprojects/packagefiles/tree-sitter-json/: meson.build
